--- a/index.html
+++ b/index.html
@@ -94,14 +94,23 @@
         </article>
         <article class="interest-card">
           <div class="interest-image">
-            <img src="https://images.unsplash.com/photo-1488646953014-85cb44e25828?w=500&h=350&fit=crop" alt="Travel">
+            <img src="https://images.unsplash.com/photo-1546519638-68e109498ffc?w=500&h=350&fit=crop" alt="Basketball">
             <div class="interest-overlay"></div>
           </div>
           <div class="interest-content">
-            <h3>Travel</h3>
-            <p>Discovering new places and cultures.</p>
+            <h3>Basketball</h3>
+            <p>My favourite sport—hoops, hustle, and good vibes.</p>
           </div>
         </article>
+      </div>
+
+      <!-- Favourite Players Link -->
+      <div class="favourite-players-section">
+        <a href="favourite-players.html" class="favourite-players-link">
+          <span class="link-icon">🏀</span>
+          <span>My Favourite Players</span>
+          <span class="link-arrow">→</span>
+        </a>
       </div>
     </div>
   </section>
