--- a/favourite-players.html
+++ b/favourite-players.html
@@ -19,7 +19,7 @@
     <div class="container">
       <a href="index.html" class="back-link">← Back to home</a>
       <h2>My Favourite Players</h2>
-      <p class="section-subtitle">The legends and stars who inspire me on the court</p>
+      <p class="section-subtitle">The league is changing...</p>
       <div class="players-grid players-grid-single">
         <article class="player-card">
           <div class="player-image">
@@ -28,7 +28,7 @@
           <div class="player-info">
             <h3>Karl-Anthony Towns</h3>
             <p class="position">Center · New York Knicks</p>
-            <p>Elite big man with a smooth outside shot and dominant presence in the paint. KAT's versatility and leadership make him one of the most exciting players in the game.</p>
+            <p>KAT is my goat player. Big purr always gives me rebounds, but sometimes he falls short, but even after all, he is still my favourite. </p>
           </div>
         </article>
       </div>
@@ -37,7 +37,7 @@
 
   <footer class="footer">
     <div class="container">
-      <p>Built with ☀️ &amp; 🌙 for DevSoc UNSW</p>
+      <p>Cash dat green 💵💵</p>
     </div>
   </footer>
 
