--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <span class="shape shape-4"></span>
     </div>
     <div class="hero-content">
-      <h1>Your Name</h1>
-      <p class="tagline">Between dawn and dusk, there's always something to build</p>
+      <h1>Daniel Su</h1>
+      <!-- <p class="tagline">Between dawn and dusk, there's always something to build</p> -->
     </div>
   </header>
 
@@ -39,7 +39,7 @@
       <div class="about-grid">
         <div class="about-card">
           <h3>Name</h3>
-          <p>Your full name goes here</p>
+          <p>Daniel Su</p>
         </div>
         <div class="about-card">
           <h3>Age</h3>
@@ -47,7 +47,7 @@
         </div>
         <div class="about-card">
           <h3>Degree</h3>
-          <p>e.g. Bachelor of Computer Science</p>
+          <p>Im studying Actuarial Studies and Computer Science at UNSW in my second year. Its been pretty cooked.</p>
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@
   <section class="interests" id="interests">
     <div class="container">
       <h2>Interests</h2>
-      <p class="section-subtitle">The things that light up my day (and night)</p>
+      <!-- <p class="section-subtitle"> interetsing things</p> -->
       <div class="interests-grid">
         <article class="interest-card">
           <div class="interest-image">
@@ -66,8 +66,8 @@
             <div class="interest-overlay"></div>
           </div>
           <div class="interest-content">
-            <h3>Coding</h3>
-            <p>Building projects and learning new technologies.</p>
+            <h3>Poker</h3>
+            <p>I recently took interest in poker, just playing casually at home games</p>
           </div>
         </article>
         <article class="interest-card">
@@ -76,8 +76,8 @@
             <div class="interest-overlay"></div>
           </div>
           <div class="interest-content">
-            <h3>Gaming</h3>
-            <p>Exploring virtual worlds in my spare time.</p>
+            <h3>Running</h3>
+            <p>I've been running for about 2 months as of now, so far it's pretty fun. The main motivation for running is so that I can eat more yummy food</p>
           </div>
         </article>
         <article class="interest-card">
@@ -97,7 +97,7 @@
           </div>
           <div class="interest-content">
             <h3>Basketball</h3>
-            <p>My favourite sport—hoops, hustle, and good vibes.</p>
+            <p> This my favourite sport. I play volleyball as well sometimes, but basketball is too peak. I like playing pick up with my friends at local rec centres.</p>
           </div>
         </article>
       </div>
@@ -115,7 +115,7 @@
   <!-- Contact / Footer -->
   <footer class="footer">
     <div class="container">
-      <p>Built with ☀️ &amp; 🌙 for DevSoc UNSW</p>
+      <p>Cash dat green 💵💵</p>
     </div>
   </footer>
 
