--- a/index.html
+++ b/index.html
@@ -36,19 +36,9 @@
   <!-- About Section -->
   <section class="about" id="about">
     <div class="container">
-      <div class="about-grid">
-        <div class="about-card">
-          <h3>Name</h3>
-          <p>Daniel Su</p>
-        </div>
-        <div class="about-card">
-          <h3>Age</h3>
-          <p>Your age</p>
-        </div>
-        <div class="about-card">
-          <h3>Degree</h3>
-          <p>Im studying Actuarial Studies and Computer Science at UNSW in my second year. Its been pretty cooked.</p>
-        </div>
+      <div class="about-box">
+        <h2>About Me</h2>
+        <p>I'm studying Actuarial Studies and Computer Science at UNSW in my second year. Its been pretty cooked.</p>
       </div>
     </div>
   </section>
@@ -62,7 +52,7 @@
         <article class="interest-card">
           <div class="interest-image">
             <!-- Replace src with your own image: images/interest1.jpg -->
-            <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?w=500&h=350&fit=crop" alt="Coding">
+            <img src="https://m.media-amazon.com/images/I/71PYjzaQ0AL._AC_SX679_.jpg" alt="Coding">
             <div class="interest-overlay"></div>
           </div>
           <div class="interest-content">
@@ -87,7 +77,9 @@
           </div>
           <div class="interest-content">
             <h3>Music</h3>
-            <p>Listening to and playing music.</p>
+            <p> I love music, both listening to and playing. I used to play the trumpet when I was younger, but quit. I really want to learn piano though. I like to listen 
+              various genres, my favourites being hardstyle, rap, rnb. 
+            </p>
           </div>
         </article>
         <article class="interest-card">
@@ -105,7 +97,7 @@
       <!-- Favourite Players Link -->
       <div class="favourite-players-section">
         <a href="favourite-players.html" class="favourite-players-link">
-          <span>My Favourite Players</span>
+          <span>My Favourite Player</span>
           <span class="link-arrow">→</span>
         </a>
       </div>
