--- a/favourite-players.html
+++ b/favourite-players.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Favourite Players | Day & Night</title>
+  <title>And after all thaatt💅💅</title>
   <link rel="stylesheet" href="styles.css?v=4">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
       <div class="players-grid players-grid-single">
         <article class="player-card">
           <div class="player-image">
-            <img src="https://images.unsplash.com/photo-1546519638-68e109498ffc?w=500&h=500&fit=crop" alt="Karl-Anthony Towns">
+            <img src="https://i.kym-cdn.com/entries/icons/original/000/054/265/Zesty_Karl_meme_cover.jpg" alt="Karl-Anthony Towns">
           </div>
           <div class="player-info">
             <h3>Karl-Anthony Towns</h3>
