after all thattt

--- a/favourite-players.html
+++ b/favourite-players.html
@@ -23,12 +23,12 @@
       <div class="players-grid players-grid-single">
         <article class="player-card">
           <div class="player-image">
-            <img src="https://i.kym-cdn.com/entries/icons/original/000/054/265/Zesty_Karl_meme_cover.jpg" alt="Karl-Anthony Towns">
+            <img src="https://i.redd.it/0q3mn755v7ze1.jpeg" alt="Karl-Anthony Towns">
           </div>
           <div class="player-info">
             <h3>Karl-Anthony Towns</h3>
             <p class="position">Center · New York Knicks</p>
-            <p>KAT is my goat player. Big purr always gives me rebounds, but sometimes he falls short, but even after all, he is still my favourite. </p>
+            <p>KAT is my goat player. Big purr always gives me rebounds, but sometimes he falls short, but even after all that, he is still my favourite. </p>
           </div>
         </article>
       </div>
