--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day & Night | Personal Portfolio — Suns & Knicks</title>
+  <title>Daniel's trying to make a website</title>
   <link rel="stylesheet" href="styles.css?v=4">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,31 +50,18 @@
       <!-- <p class="section-subtitle"> interetsing things</p> -->
       <div class="interests-grid">
         <article class="interest-card">
-          <div class="interest-image">
-            <!-- Replace src with your own image: images/interest1.jpg -->
-            <img src="https://m.media-amazon.com/images/I/71PYjzaQ0AL._AC_SX679_.jpg" alt="Coding">
-            <div class="interest-overlay"></div>
-          </div>
           <div class="interest-content">
             <h3>Poker</h3>
             <p>I recently took interest in poker, just playing casually at home games</p>
           </div>
         </article>
         <article class="interest-card">
-          <div class="interest-image">
-            <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?w=500&h=350&fit=crop" alt="Gaming">
-            <div class="interest-overlay"></div>
-          </div>
           <div class="interest-content">
             <h3>Running</h3>
             <p>I've been running for about 2 months as of now, so far it's pretty fun. The main motivation for running is so that I can eat more yummy food</p>
           </div>
         </article>
         <article class="interest-card">
-          <div class="interest-image">
-            <img src="https://images.unsplash.com/photo-1511379938547-c1f69419868d?w=500&h=350&fit=crop" alt="Music">
-            <div class="interest-overlay"></div>
-          </div>
           <div class="interest-content">
             <h3>Music</h3>
             <p> I love music, both listening to and playing. I used to play the trumpet when I was younger, but quit. I really want to learn piano though. I like to listen 
@@ -83,10 +70,6 @@
           </div>
         </article>
         <article class="interest-card">
-          <div class="interest-image">
-            <img src="https://images.unsplash.com/photo-1546519638-68e109498ffc?w=500&h=350&fit=crop" alt="Basketball">
-            <div class="interest-overlay"></div>
-          </div>
           <div class="interest-content">
             <h3>Basketball</h3>
             <p> This my favourite sport. I play volleyball as well sometimes, but basketball is too peak. I like playing pick up with my friends at local rec centres.</p>
