--- a/favourite-players.html
+++ b/favourite-players.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>And after all thaatt💅💅</title>
-  <link rel="stylesheet" href="styles.css?v=5">
+  <link rel="stylesheet" href="styles.css?v=6">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Plus+Jakarta+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <section class="about">
@@ -15,7 +15,10 @@
       <a href="index.html" class="back-link">← Back to home</a>
       <h2>My Favourite Players</h2>
       <p class="section-subtitle">The league is changing...</p>
-      <div class="players-grid players-grid-single">
+      <div class="players-grid players-grid-three">
+        <div class="player-image-only">
+          <img src="https://images.unsplash.com/photo-1546519638-68e109498ffc?w=400&h=400&fit=crop" alt="Basketball">
+        </div>
         <article class="player-card">
           <div class="player-image">
             <img src="https://i.redd.it/0q3mn755v7ze1.jpeg" alt="Karl-Anthony Towns">
@@ -26,6 +29,9 @@
             <p>KAT is my goat player. Big purr always gives me rebounds, but sometimes he falls short, but even after all that, he is still my favourite. </p>
           </div>
         </article>
+        <div class="player-image-only">
+          <img src="https://images.unsplash.com/photo-1519861531473-9200262188bf?w=400&h=400&fit=crop" alt="Basketball court">
+        </div>
       </div>
     </div>
   </section>
