--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daniel's trying to make a website</title>
-  <link rel="stylesheet" href="styles.css?v=5">
+  <link rel="stylesheet" href="styles.css?v=6">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Plus+Jakarta+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Hero Section -->
@@ -22,7 +22,7 @@
     </div>
     <div class="hero-content">
       <h1>Daniel Su</h1>
-      <!-- <p class="tagline">Between dawn and dusk, there's always something to build</p> -->
+      <p class="tagline">I don't actually like the Suns this much.</p>
     </div>
   </header>
 
@@ -30,8 +30,8 @@
   <section class="about" id="about">
     <div class="container">
       <div class="about-box">
-        <h2>About Me</h2>
-        <p>I'm studying Actuarial Studies and Computer Science at UNSW in my second year. Its been pretty cooked.</p>
+        <h2>talm bout me?</h2>
+        <p>I'm studying Actuarial Studies and Computer Science at UNSW in my second year. Its been pretty cooked, but I'm still enjoying what the journey.</p>
       </div>
     </div>
   </section>
@@ -45,7 +45,7 @@
         <article class="interest-card">
           <div class="interest-content">
             <h3>Poker</h3>
-            <p>I recently took interest in poker, just playing casually at home games</p>
+            <p>A lot of my friends have been playing poker for ages, and I only recently have started playing. I just play friendly games with them.</p>
           </div>
         </article>
         <article class="interest-card">
