--- a/favourite-players.html
+++ b/favourite-players.html
@@ -17,7 +17,7 @@
       <p class="section-subtitle">The league is changing...</p>
       <div class="players-grid players-grid-three">
         <div class="player-image-only">
-          <img src="https://images.unsplash.com/photo-1546519638-68e109498ffc?w=400&h=400&fit=crop" alt="Basketball">
+          <img src="https://media.tenor.com/zUVbBcSALKYAAAAe/karl-anthony-towns-kat.png" alt="Basketball">
         </div>
         <article class="player-card">
           <div class="player-image">
@@ -30,7 +30,7 @@
           </div>
         </article>
         <div class="player-image-only">
-          <img src="https://images.unsplash.com/photo-1519861531473-9200262188bf?w=400&h=400&fit=crop" alt="Basketball court">
+          <img src="https://pbs.twimg.com/media/Gr1y5sWWIAAiNcp.jpg" alt="Basketball court">
         </div>
       </div>
     </div>
