--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="hero-content">
       <h1>Daniel Su</h1>
-      <p class="tagline">I don't actually like the Suns this much.</p>
+      <p class="tagline">I hate the Suns</p>
     </div>
   </header>
 
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="about-box">
         <h2>talm bout me?</h2>
-        <p>I'm studying Actuarial Studies and Computer Science at UNSW in my second year. Its been pretty cooked, but I'm still enjoying what the journey.</p>
+        <p>I'm studying Actuarial Studies and Computer Science at UNSW in my second year. Its been pretty cooked, but I'm still enjoying the journey.</p>
       </div>
     </div>
   </section>
@@ -42,6 +42,12 @@
       <h2>Interests</h2>
       <!-- <p class="section-subtitle"> interetsing things</p> -->
       <div class="interests-grid">
+        <article class="interest-card">
+          <div class="interest-content">
+            <h3>New Interest</h3>
+            <p>Add your description here.</p>
+          </div>
+        </article>
         <article class="interest-card">
           <div class="interest-content">
             <h3>Poker</h3>
