fix image spacing?

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <div class="interests-grid">
         <article class="interest-card">
           <div class="interest-content">
-            <h3>New Interest</h3>
-            <p>Add your description here.</p>
+            <h3>Eating and Food</h3>
+            <p>I like cooking, especially trying new recipes with friends. But I love the food the most, and eating it.</p>
           </div>
         </article>
         <article class="interest-card">
