--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@
 
       <!-- Favourite Players Link -->
       <div class="favourite-players-section">
-        <a href="favourite-players.html" class="favourite-players-link">
+        <a href="kat.html" class="favourite-players-link">
           <span>My Favourite Player</span>
           <span class="link-arrow">→</span>
         </a>
