revert file name change

--- a/favourite-players.html
+++ b/favourite-players.html
@@ -12,7 +12,7 @@
 <body>
   <section class="about">
     <div class="container">
-      <a href="home.html" class="back-link">← Back</a>
+      <a href="index.html" class="back-link">← Back</a>
       <h2>My Favourite Player</h2>
       <p class="section-subtitle">The league is changing...</p>
       <div class="players-grid players-grid-three">
