--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <article class="interest-card">
           <div class="interest-content">
             <h3>Poker</h3>
-            <p>I recently started playing poker, I just play for fun with friends. I'm not very good but I will get there.</p>
+            <p>A lot of my friends have been playing poker for ages, and I only recently have started playing. I just play friendly games with them.</p>
           </div>
         </article>
         <article class="interest-card">
