--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daniel's court</title>
-  <link rel="stylesheet" href="styles.css?v=8">
+  <link rel="stylesheet" href="styles.css?v=9">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Plus+Jakarta+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Rolling basketball: click to toggle theme, roll right to reveal interests -->
-  <button type="button" class="rolling-ball" id="rolling-ball" aria-label="Toggle theme and reveal interests" title="Click to reveal">
-    <span class="ball-inner">
-      <span class="ball-seams"></span>
-    </span>
-  </button>
-
   <!-- Hero Section -->
   <header class="hero">
     <div class="hero-bg-suns"></div>
@@ -79,6 +72,9 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <!-- Rolling basketball: click to reveal interests -->
+  <button type="button" class="rolling-ball" id="rolling-ball" aria-label="Click to reveal interests" title="Click the basketball"></button>
+
+  <script src="script.js?v=2"></script>
 </body>
 </html>
