--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daniel's court</title>
-  <link rel="stylesheet" href="styles.css?v=9">
+  <link rel="stylesheet" href="styles.css?v=10">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Plus+Jakarta+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -26,34 +26,50 @@
     </div>
   </header>
 
-  <!-- Interests section: revealed when ball rolls right -->
-  <section class="interests-reveal" id="interests-section" aria-hidden="true">
-    <div class="container container--interests">
+  <!-- Talm bout me - always visible -->
+  <section class="talm-section">
+    <div class="container container--main">
       <div class="talm-bout-me">
         <h2>talm bout me?</h2>
         <p>I'm studying Actuarial Studies and Computer Science at UNSW in my second year. Its been pretty cooked, but I'm still enjoying the journey.</p>
       </div>
 
-      <div class="interests-stack">
-        <div class="interest-panel">
-          <h3>Eating and Food</h3>
-          <p>I like cooking, especially trying new recipes with friends. But I love the food the most, and eating it.</p>
+      <!-- 5 balls stacked, each with expandable interest panel -->
+      <div class="balls-stack">
+        <div class="ball-row">
+          <button type="button" class="interest-ball" data-panel="panel-1" aria-expanded="false" aria-controls="panel-1" id="ball-1"></button>
+          <div class="interest-panel" id="panel-1" aria-labelledby="ball-1" hidden>
+            <h3>Eating and Food</h3>
+            <p>I like cooking, especially trying new recipes with friends. But I love the food the most, and eating it.</p>
+          </div>
         </div>
-        <div class="interest-panel">
-          <h3>Poker</h3>
-          <p>A lot of my friends have been playing poker for ages, and I only recently have started playing. I just play friendly games with them.</p>
+        <div class="ball-row">
+          <button type="button" class="interest-ball" data-panel="panel-2" aria-expanded="false" aria-controls="panel-2" id="ball-2"></button>
+          <div class="interest-panel" id="panel-2" aria-labelledby="ball-2" hidden>
+            <h3>Poker</h3>
+            <p>A lot of my friends have been playing poker for ages, and I only recently have started playing. I just play friendly games with them.</p>
+          </div>
         </div>
-        <div class="interest-panel">
-          <h3>Running</h3>
-          <p>I've been running for about 2 months as of now, so far it's pretty fun. The main motivation for running is so that I can eat more yummy food</p>
+        <div class="ball-row">
+          <button type="button" class="interest-ball" data-panel="panel-3" aria-expanded="false" aria-controls="panel-3" id="ball-3"></button>
+          <div class="interest-panel" id="panel-3" aria-labelledby="ball-3" hidden>
+            <h3>Running</h3>
+            <p>I've been running for about 2 months as of now, so far it's pretty fun. The main motivation for running is so that I can eat more yummy food</p>
+          </div>
         </div>
-        <div class="interest-panel">
-          <h3>Music</h3>
-          <p>I love music, both listening to and playing. I used to play the trumpet when I was younger, but quit. I really want to learn piano though. I like to listen to various genres, my favourites being hardstyle, rap, rnb.</p>
+        <div class="ball-row">
+          <button type="button" class="interest-ball" data-panel="panel-4" aria-expanded="false" aria-controls="panel-4" id="ball-4"></button>
+          <div class="interest-panel" id="panel-4" aria-labelledby="ball-4" hidden>
+            <h3>Music</h3>
+            <p>I love music, both listening to and playing. I used to play the trumpet when I was younger, but quit. I really want to learn piano though. I like to listen to various genres, my favourites being hardstyle, rap, rnb.</p>
+          </div>
         </div>
-        <div class="interest-panel">
-          <h3>Basketball</h3>
-          <p>This my favourite sport. I play volleyball as well sometimes, but basketball is too peak. I like playing pick up with my friends at local rec centres.</p>
+        <div class="ball-row">
+          <button type="button" class="interest-ball" data-panel="panel-5" aria-expanded="false" aria-controls="panel-5" id="ball-5"></button>
+          <div class="interest-panel" id="panel-5" aria-labelledby="ball-5" hidden>
+            <h3>Basketball</h3>
+            <p>This my favourite sport. I play volleyball as well sometimes, but basketball is too peak. I like playing pick up with my friends at local rec centres.</p>
+          </div>
         </div>
       </div>
 
@@ -72,9 +88,6 @@
     </div>
   </footer>
 
-  <!-- Rolling basketball: click to reveal interests -->
-  <button type="button" class="rolling-ball" id="rolling-ball" aria-label="Click to reveal interests" title="Click the basketball"></button>
-
-  <script src="script.js?v=2"></script>
+  <script src="script.js?v=3"></script>
 </body>
 </html>
