--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
   <section class="talm-section">
     <div class="container container--main">
       <div class="talm-bout-me">
-        <h2>talm bout me?</h2>
+        <h2>me?</h2>
         <p>I'm studying Actuarial Studies and Computer Science at UNSW in my second year. Its been pretty cooked, but I'm still enjoying the journey.</p>
+        <p class="balls-hint">(click on the balls)</p>
       </div>
 
       <!-- 5 balls stacked, each with expandable interest panel -->
@@ -40,7 +41,7 @@
           <button type="button" class="interest-ball" data-panel="panel-1" aria-expanded="false" aria-controls="panel-1" id="ball-1"><span class="ball-inner"><span class="ball-seams"></span></span></button>
           <div class="interest-panel" id="panel-1" aria-labelledby="ball-1" hidden>
             <h3>Eating and Food</h3>
-            <p>I like cooking, especially trying new recipes with friends. But I love the food the most, and eating it.</p>
+            <p>I like food. I like trying new foods with friends, whether that is cooking it ourselves or trying new food spots. Food is what makes life worth living.</p>
           </div>
         </div>
         <div class="ball-row">
